<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="16dp">

    <EditText
        android:id="@+id/etNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:layout_marginTop="12dp"
        android:minHeight="56dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:fontFamily="@font/comic"
        android:textColor="#000000"
        android:textColorHint="#444444" />

    <EditText
        android:id="@+id/etEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:layout_marginTop="12dp"
        android:minHeight="56dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:fontFamily="@font/comic"
        android:textColor="#000000"
        android:textColorHint="#444444" />

    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_marginTop="12dp"
        android:minHeight="56dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:fontFamily="@font/comic"
        android:textColor="#000000"
        android:textColorHint="#444444" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="24dp"
        android:minHeight="56dp"
        android:fontFamily="@font/comic"
        android:backgroundTint="#3F51B5"
        android:textColor="#FFFFFF" />
</LinearLayout>
