<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FFFFFF">

    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:textColorHint="#777777"
        android:inputType="textEmailAddress"
        android:minHeight="56dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:fontFamily="@font/comic"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/etPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:textColorHint="#777777"
        android:inputType="textPassword"
        android:minHeight="56dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:fontFamily="@font/comic"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tvToRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_prompt"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/comic"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:minHeight="56dp"
        android:text="@string/login"
        android:fontFamily="@font/comic"
        android:backgroundTint="#3F51B5"
        android:textColor="#FFFFFF"
        />
</LinearLayout>
